crates/iota/tests/snapshots/shell_tests__implicits__build.sh.snap
---
source: crates/iota/tests/shell_tests.rs
description: tests/shell_tests/implicits/build.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Modifications Copyright (c) 2025 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

# tests that building a package that implicitly depends on `Bridge` can build
iota move build -p example 2> /dev/null

----- results -----
success: true
exit_code: 0
----- stdout -----

----- stderr -----
